--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,7 +41,6 @@ html {
 
 body {
   font-family: var(--open-family);
-  overflow-x: hidden;
   background-color: var(--gray-bg-col);
 }
 a {
